# rscom

./: Cargo.toml  README.md
examples/: rscom.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  macros.rs  main.rs  serial.rs  terminal.rs
tests/: config_validation.rs  macro_dispatch.rs
