[package]
name = "rscom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serialport = { version = "4.8", default-features = false }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.15"
